# advent-of-code

./: .gitignore  README.md
2015/: aoc.py  p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p2.py  p20.py  p21.py  p22.py  p23.py  p24.py  p25.py  p3-2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py
2016/code/: hylib.lua  p1.lua  p10.lua  p11.lua  p12.lua  p13.lua  p14.lua  p15.lua  p16.lua  p17.lua  p18.lua  p19.lua  p2.lua  p20.lua  p21.lua  p22.lua  p23.lua  p24.lua  p25.lua  p3.lua  p4.lua  p5.lua  p6.lua  p7.lua  p8.lua  p9.lua
2016/inputs/: p11.txt
2017/: Cargo.toml
2017/src/: common.rs  d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  main.rs
2018/: aoc.go
2018/inputs/: d1.txt  inputs.go
2018/solutions/: d1.go  d10.go  d11.go  d12.go  d13.go  d2.go  d3.go  d4.go  d5.go  d6.go  d7.go  d8.go  d9.go
2023/: Day1.cs  Day2.cs  IDaySolver.cs  Program.cs
2023/code/: Common.cs  Day1.cs  Day2.cs  Day3.cs  Day4.cs
