[package]
name = "aoc"
version = "0.1.0"
authors = ["Steven Hyland <2knowindeed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
primal = "0.2"

[dependencies.regex]
version = "1.5.5"
default-features = false
features = ["std", "perf"]